feat: 번쩍 개설 및 수정 시 모임 키워드 등록 기능 구현 완료 (#643)
* refactor: 커스텀 예외로 변경

* feat: 모임 키워드 열거형 생성

* refactor: 번쩍 모임 생성 및 수정 DTO에 meetingKeywordType 리스트를 받도록 변경

* refactor: Tag 엔티티에 meetingKeywordTypes 리스트 추가 및 정적 팩토리 메서드 리팩토링

* refactor: 번쩍 태그 생성 시 MeetingKeywordType 리스트도 같이 생성하도록 변경

* fix: 오타 수정

* refactor: 번쩍 모임 수정 시 모임 키워드를 받도록 리팩토링

* refactor: tagId도 API 응답 시 보내주도록 변경

* fix: 스키마 이름 수정

* chore: 메서드 일관성 유지